package src;

public class Admin {
}
