package src;

public class Location {
}
