package src;

public class Statistic {

}
