@startuml
!pragma layout smetana
class Main{
+ static void main(String[] args)
}

class Customer {
    - String customerID
    - String firstName
    - String phoneNumber
    - int ticketNumber
    + ArrayList<Customer> customers
    + Customer(String, String, String, int)
    + getCustomerID(): String
    + getFirstName(): String
    + getPhoneNumber(): String
    + getTicketNumber(): int
    + getCustomers(): ArrayList<Customer>
    + toString(): String
}

class Company {
    - int capacity
    - String name
    + Company(int, String)
    + getName(): String
}

class TicketHandler {
    + ticketGeneration(Customer)
}

class Admin {
    + generateAdminCode(Company)
}

class ErrorHandler {
    + saveCustomerDataError()
    + getAllCustomerDataError()
    + getCustomerDataError()
    + timesVisistedError()
    + removeCustomerError()
}

class FileIO {
    - String customerDataPath
    - String allTimeCustomerData
    - String adminDataPath
    - ErrorHandler er
    + saveCustomerData(Customer, ArrayList<Customer>)
    + getAllCustomerData(ArrayList<Customer>)
    + getCurrentCustomerData(ArrayList<Customer>)
    + timesVisited(Customer)
    + removeCustomer(Customer)
    + generateAdminCode(Company)
}

class Organizer {
    - boolean accesory
    + ticketGeneration(Customer)
}

class Location {
}

class CustomerService {
}

class Statistic {
}

Main "1" -- "*" Company : uses >

Company "1" -- "*" Customer : serves >
Company "1" -- "*" TicketHandler : uses >
Company "1" -- "1" Admin : manages >
Company "1" -- "1" FileIO : uses >

Admin "1" -- "1" FileIO : uses >

TicketHandler "1" -- "1" Customer : generates >

Customer "1" -- "1" Organizer : uses >

FileIO "1" -- "1" ErrorHandler : uses >

@enduml
